--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,6 +9,7 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  font-size: 36px;
 }
 
 * {
@@ -23,4 +24,77 @@ a {
     color: white;
     background: black;
   }
+}
+
+
+
+.section {
+  padding-top: 20px;
+  padding-bottom: 10px;
+  position: relative;
+}
+
+.header {
+  padding: 0px 15px;
+}
+.header .nav-item {
+  padding-left: 50px;
+}
+
+.header .navbar {
+  padding: 10px 0px;
+  line-height: 50px;
+}
+
+.header.sticky {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 91;
+}
+
+.header.sticky .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  padding: 10px 15px;
+  width: 100%;
+  background: #1D5C63;
+  box-shadow: 0px 6px 13px 0px rgb(0 0 0 / 6%);
+  opacity: 0;
+  -webkit-animation: fadeInDown .95s ease-in-out 0s 1 normal none running;
+  animation: fadeInDown .95s ease-in-out 0s 1 normal none running;
+  -webkit-transition: all .3s cubic-bezier(.645,.045,.355,1);
+  transition: all .3s cubic-bezier(.645,.045,.355,1);
+  opacity: 1;
+  -webkit-transform: translateY(0%);
+          transform: translateY(0%);
+}
+
+.navbar-brand {
+  display: flex;
+  align-items: right;
+  height: 50px;
+  width:60px;
+  justify-content: center;
+  align-items: top;
+}
+.navbar-brand>img {
+  
+  height: 50px;
+  width: 80px;
+}
+
+.navbar-collapse {
+  align-items: right;
+}
+
+.bg-green {
+  background-color: #04101d;
+}
+
+
+.img-radius {
+  border-radius: 15px;
 }
