--- a/styles/globals.css
+++ b/styles/globals.css
@@ -98,3 +98,31 @@ a {
 .img-radius {
   border-radius: 15px;
 }
+
+.item  {
+  width: 50%;
+  height: 50%;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+.carousel {
+  width:500px;
+  height:500px;
+  
+
+}
+
+.width66 {
+  width: 66vw;
+}
+
+.Accordion {
+  width: 66vw;
+}
+
+
+.fullDiv {
+  height: 100vh;
+  width: 100vw;
+}
