--- a/styles/globals.css
+++ b/styles/globals.css
@@ -127,3 +127,105 @@ a {
   height: 100vh;
   width: 100vw;
 }
+
+
+.textcenter {
+  text-align: center;
+}
+
+
+.game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game__menu {
+  text-align: center;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+.game__board {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 8px;
+  width: 50vw;
+  height: 50vh;
+  justify-content: center;
+  align-items: center;
+}
+
+.square {
+  background-color: #eee;
+  border-radius: 8px;
+  box-shadow: 0px 4px #ddd;
+  text-align: center;
+  font-size: 64px;
+  line-height: 100px;
+  font-weight: bold;
+  width: 100px;
+  height: 100px;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+  display: flex;
+  text-align: center;
+  margin: auto;
+
+  
+}
+
+.square:hover {
+    background-color: aquamarine !important;
+    transform: scale(1.05);
+    transition: transform 0.7s ease;
+}
+
+.square.highlight {
+  background-color: aquamarine;
+  box-shadow: none;
+}
+
+.modal {
+  width: 60vw;
+  height: 40vh;
+  border-radius: 16px;
+  box-shadow: 0px 0px 10px 0px gray;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 24px;
+  position: fixed;
+  top: 50%;
+  background-color: white;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0);
+  transition: transform 0.2s;
+}
+
+.modal.show {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal__title {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 69px;
+  margin-top: 16px;
+}
+
+.button {
+  border: none;
+  width: 100%;
+  height: 36px;
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 16px;
+}
+
+.button:hover {
+    background-color: #ff0099 !important;
+    transform: scale(1.05) !important;
+    transition: transform 0.7s ease !important;
+}
