--- a/styles/globals.css
+++ b/styles/globals.css
@@ -16,15 +16,6 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
-}
 
 
 
@@ -150,8 +141,8 @@ a {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 8px;
-  width: 50vw;
-  height: 50vh;
+  width: 300px;
+  height: 300px;
   justify-content: center;
   align-items: center;
 }
@@ -228,4 +219,48 @@ a {
     background-color: #ff0099 !important;
     transform: scale(1.05) !important;
     transition: transform 0.7s ease !important;
+}
+
+.cardcust {
+  border-color: #ff0099 !important;
+  border-width: 3px !important;
+  border-radius: 15px;
+  width: 600px;
+  height: 600px;
+  
+  
+
+}
+
+
+.gameSize {
+  width: 300px;
+  height: 300px;
+}
+
+
+.divWide {
+ width: 600px !important;
+ height: 600px;
+}
+
+@media screen and (max-width: 900px) {
+  game__menu {
+    font-size: 16px;
+  }
+  
+  square {
+    width: 50px;
+    height: 50px;
+  }
+
+  cardcust {
+    width: 300px !important;
+    height: 300px !important;
+  }
+
+  divWide {
+    width: 300px;
+    height: 300px;
+  }
 }
